[tool.poetry]
name = "firstdiscordbot"
version = "0.1.0"
description = "my frist discord bot"
authors = ["Daniel Steinmetz <Dms12.eth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
